# OpenRCT2

./: .clang-format  .clang-tidy  .commitlint.json  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD_STATUS_REPORT.md  CMakeLists.txt  CMakeLists_mingw.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  COMPETITION_UI_COMPLETE.md  COMPETITIVE_LOBBY_IMPLEMENTATION.md  COMPETITIVE_MULTIPLAYER_ANALYSIS.md  COMPETITIVE_MULTIPLAYER_STATUS.md  CONTRIBUTING.md  CommunityGuidelines.md  Desktop - Shortcut.lnk  Dockerfile  EXECUTIVE_SUMMARY.md  File Handling  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_HANDOFF.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASES_3_7_IMPLEMENTATION_COMPLETE.md  PRIVACY.md  PaintUnitTest.vcxproj  TESTING_GUIDE.md  TEST_IMPLEMENTATION_COMPLETE.md  VSgetLibs.bat  add_handlers.py  all  appveyor.yml  assets.json  build-and-test.ps1  (+45 more)
src/: CMakeLists.txt  FileClassifier.cpp  FileClassifier.h  OpenRCT2.cpp  OpenRCT2.h  PlatformEnvironment.cpp  PlatformEnvironment.h  SDL_android_main.c  ScenarioRepository.cpp  ScenarioRepository.h  ScenarioSources.cpp  ScenarioSources.h  addresses.c  addresses.h  audio.c  audio.h  award.c  award.h  cheats.c  cheats.h  climate.c  climate.h  cmdline.c  cmdline.h  cmdline_sprite.c  cmdline_sprite.h  common.h  config.c  config.h  currency.c  currency.h  cursors.c  cursors.h  date.c  date.h  diagnostic.c  diagnostic.h  editor.c  editor.h  finance.c  (+145 more)
src/argparse/: argparse.c
src/audio/: AudioChannel.cpp  AudioChannel.h  AudioFormat.h  AudioMixer.cpp  AudioMixer.h  AudioSource.h  CMakeLists.txt  FileAudioSource.cpp  MemoryAudioSource.cpp  NullAudioSource.cpp  audio.c  audio.h  mixer.cpp  mixer.h
src/cmdline/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  CommandLineDefinitions.cpp  ConvertCommand.cpp  RootCommands.cpp  ScreenshotCommands.cpp  SpriteCommands.cpp
src/core/: CMakeLists.txt  Collections.hpp  Console.cpp  Console.hpp  Diagnostics.cpp  Diagnostics.hpp  Exception.hpp  File.cpp  File.h  FileEnumerator.cpp  FileEnumerator.h  FileScanner.cpp  FileScanner.h  FileStream.hpp  Guard.cpp  Guard.hpp  IDisposable.hpp  IStream.cpp  IStream.hpp  Json.cpp  Json.hpp  List.hpp  Math.hpp  Memory.hpp  MemoryStream.cpp  MemoryStream.h  Nullable.hpp  Path.cpp  Path.hpp  Stopwatch.cpp  Stopwatch.hpp  String.cpp  String.hpp  StringBuilder.hpp  StringReader.hpp  Util.hpp  Zip.cpp  Zip.h  guard.h  stopwatch.h  (+2 more)
src/drawing/: CMakeLists.txt  IDrawingContext.h  IDrawingEngine.h  Image.cpp  NewDrawing.cpp  NewDrawing.h  Rain.cpp  Rain.h  drawing.c  drawing.h  drawing_fast.cpp  font.c  font.h  gfx.c  lightfx.c  lightfx.h  line.c  rain.c  rain.cpp  rect.c  scrolling_text.c  snow.c  sprite.c  string.c  supports.c  supports.h
src/interface/: CMakeLists.txt  CursorData.cpp  Cursors.cpp  Cursors.h  Fonts.cpp  Fonts.h  Theme.cpp  chat.c  chat.h  colour.c  colour.h  colour_schemes.c  colour_schemes.h  console.c  console.h  gif.cpp  graph.c  graph.h  keyboard_shortcut.c  keyboard_shortcut.h  paint.c  paint.h  paint_surface.c  paint_surface.h  screenshot.c  screenshot.h  themes.c  themes.h  title_sequences.c  title_sequences.cpp  title_sequences.h  viewport.c  viewport.h  viewport_interaction.c  widget.c  widget.h  window.c  window.h
src/localisation/: CMakeLists.txt  LanguagePack.cpp  LanguagePack.h  convert.c  currency.c  currency.h  date.c  date.h  format_codes.c  format_codes.h  language.c  language.cpp  language.h  localisation.c  localisation.h  real_names.c  string_ids.c  string_ids.h  user.c  user.h  utf8.c
src/management/: CMakeLists.txt  award.c  award.h  finance.c  finance.h  marketing.c  marketing.h  news_item.c  news_item.h  research.c  research.h
src/network/: CMakeLists.txt  NetworkAction.cpp  NetworkAction.h  NetworkAddress.cpp  NetworkAddress.h  NetworkConnection.cpp  NetworkConnection.h  NetworkGroup.cpp  NetworkGroup.h  NetworkKey.cpp  NetworkKey.h  NetworkPacket.cpp  NetworkPacket.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkServerAdvertiser.cpp  NetworkServerAdvertiser.h  NetworkTypes.h  NetworkUser.cpp  NetworkUser.h  TcpSocket.cpp  TcpSocket.h  http.c  http.cpp  http.h  network.c  network.cpp  network.h  twitch.c  twitch.cpp  twitch.h
src/object/: BannerObject.cpp  BannerObject.h  CMakeLists.txt  EntranceObject.cpp  EntranceObject.h  FootpathItemObject.cpp  FootpathItemObject.h  FootpathObject.cpp  FootpathObject.h  ImageTable.cpp  ImageTable.h  LargeSceneryObject.cpp  LargeSceneryObject.h  Object.cpp  Object.h  ObjectCache.cpp  ObjectCache.h  ObjectFactory.cpp  ObjectFactory.h  ObjectManager.cpp  ObjectManager.h  ObjectRepository.cpp  ObjectRepository.h  RideObject.cpp  RideObject.h  SceneryGroupObject.cpp  SceneryGroupObject.h  SceneryObject.h  SmallSceneryObject.cpp  SmallSceneryObject.h  StexObject.cpp  StexObject.h  StringTable.cpp  StringTable.h  WallObject.cpp  WallObject.h  WaterObject.cpp  WaterObject.h
src/openrct2-android/: .gitignore  README.md  build.gradle  gradle.properties  gradlew
src/openrct2-cli/: CMakeLists.txt  Cli.cpp  Compat.cpp  openrct2-cli.vcxproj
src/openrct2-data/: openrct2-data.vcxproj
src/openrct2-deps/: openrct2-deps.vcxproj
src/openrct2-dll/: CMakeLists.txt  openrct2-dll.cpp  openrct2-dll.vcxproj
src/openrct2-nix/: CMakeLists.txt  openrct2-nix.cpp
src/openrct2-spritecompiler/: CMakeLists.txt  Cli.cpp  openrct2-spritecompiler.vcxproj
src/openrct2-ui/: CMakeLists.txt  CursorData.cpp  CursorData.h  CursorRepository.cpp  CursorRepository.h  ProvisionalElements.cpp  ProvisionalElements.h  SDLException.cpp  SDLException.h  TextComposition.cpp  TextComposition.h  Ui.cpp  Ui.h  UiContext.Android.cpp  UiContext.Linux.cpp  UiContext.Win32.cpp  UiContext.cpp  UiContext.h  UiContext.macOS.mm  UiStringIds.h  WindowManager.cpp  WindowManager.h  libopenrct2ui.vcxproj  openrct2ui_pch.h
src/openrct2-unity/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  openrct2-unity.sln
src/openrct2-win/: CMakeLists.txt  WaterRaiseAction3  openrct2-win.cpp  openrct2-win.manifest  openrct2-win.vcxproj  (+1 more)
(+4753 files in other folders)
